# gt-arcade-control-center

.github/workflows/: main.yml
GT_ARCADE_CONTROL_CENTER/: CMakeLists.txt  README_TR.md  pico_sdk_import.cmake
GT_ARCADE_CONTROL_CENTER/docs/: KALIBRASYON.md
GT_ARCADE_CONTROL_CENTER/pc_app/: gt_arcade_control_center.py
GT_ARCADE_CONTROL_CENTER/src/: keyboard_usb_descriptors.c  keyboard_usb_descriptors.h  tusb_config.h
docs/: KURULUM.md  PIN_LISTESI.md  TEKNOPARROT.md
pc_app/: GT_ARCADE_CONTROL_CENTER.bat
src/: keyboard_main.c  mouse_main.c  mouse_usb_descriptors.c  mouse_usb_descriptors.h
